syntax = "proto3";

package yandex.cloud.priv.baas.v1;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/baas/v1/backup.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/baas/v1;baas";

service BackupService {
    rpc ListArchives(ListArchivesRequest) returns (ListArchivesResponse);

    rpc List(ListBackupsRequest) returns (ListBackupsResponse);

    rpc StartRecovery(StartRecoveryRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
          metadata: "StartRecoveryMetadata"
          response: "google.protobuf.Empty"
        };
    }

    rpc Delete(DeleteBackupRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
          metadata: "DeleteBackupMetadata"
          response: "google.protobuf.Empty"
        };
    }
}

message ListArchivesRequest {
    oneof id {
        option (exactly_one) = true;
        string folder_id = 1;
        string compute_instance_id = 2;
    };
}

message ListArchivesResponse {
    repeated Archive archives = 1;
}

message ListBackupsRequest {
    oneof id {
        option (exactly_one) = true;
        string compute_instance_id = 1;
        string archive_id = 2;
    };
}

message ListBackupsResponse {
    repeated Backup backups = 1;
}

message StartRecoveryRequest {
    string compute_instance_id = 1;
    string backup_id = 2;
}

message StartRecoveryMetadata {
}

message DeleteBackupRequest {
    string compute_instance_id = 1;
    string backup_id = 2;
}

message DeleteBackupMetadata {
}
